# task_manager_system

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/: entrypoint.sh
src/apps/task_management_system/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/apps/task_management_system/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_priority_alter_task_status.py
src/apps/users/: admin.py  models.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py
src/config/: settings.py  urls.py
src/nginx/: default.conf
