[tool.poetry]
name = "taskmanagementsystem"
version = "0.1.0"
description = ""
authors = ["gaxeris <andreykardanev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-rest-framework = "^0.1.0"
django-pytest = "^0.2.0"
pytest = "^8.3.3"
celery = "^5.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
