[tool.poetry]
name = "taskmanagementsystem"
version = "0.1.0"
description = ""
authors = ["gaxeris <andreykardanev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-rest-framework = "^0.1.0"
django-pytest = "^0.2.0"
pytest = "^8.3.3"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
django-filter = "^24.3"
django-cors-headers = "^4.6.0"
drf-spectacular = "^0.28.0"
gunicorn = "^23.0.0"
redis = "^5.2.1"
psycopg2 = "2.9.9"
djangoviz = "^0.1.1"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
